v2.2.1/_sources/plugins/radius_server_sequence_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.radius_server_sequence_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.radius_server_sequence module -- Resource module for Radius Server Sequence
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.2.1).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.radius_server_sequence`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Radius Server Sequence.
- This API creates a RADIUS server sequence.
- This API deletes a RADIUS server sequence.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk >= 1.4.0
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-BeforeAcceptAttrManipulatorsList"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-BeforeAcceptAttrManipulatorsList:

      .. rst-class:: ansible-option-title

      **BeforeAcceptAttrManipulatorsList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-BeforeAcceptAttrManipulatorsList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The beforeAcceptAttrManipulators is required only if useAttrSetBeforeAcc is true.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-BeforeAcceptAttrManipulatorsList/action"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-BeforeAcceptAttrManipulatorsList/action:

      .. rst-class:: ansible-option-title

      **action**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-BeforeAcceptAttrManipulatorsList/action" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Allowed Values - ADD, - UPDATE, - REMOVE, - REMOVEANY.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-BeforeAcceptAttrManipulatorsList/attributeName"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-BeforeAcceptAttrManipulatorsList/attributeName:

      .. rst-class:: ansible-option-title

      **attributeName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-BeforeAcceptAttrManipulatorsList/attributeName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radius Server Sequence's attributeName.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-BeforeAcceptAttrManipulatorsList/changedVal"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-BeforeAcceptAttrManipulatorsList/changedVal:

      .. rst-class:: ansible-option-title

      **changedVal**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-BeforeAcceptAttrManipulatorsList/changedVal" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The changedVal is required only if the action equals to 'UPDATE'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-BeforeAcceptAttrManipulatorsList/dictionaryName"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-BeforeAcceptAttrManipulatorsList/dictionaryName:

      .. rst-class:: ansible-option-title

      **dictionaryName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-BeforeAcceptAttrManipulatorsList/dictionaryName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radius Server Sequence's dictionaryName.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-BeforeAcceptAttrManipulatorsList/value"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-BeforeAcceptAttrManipulatorsList/value:

      .. rst-class:: ansible-option-title

      **value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-BeforeAcceptAttrManipulatorsList/value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radius Server Sequence's value.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-continueAuthorzPolicy"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-continueAuthorzPolicy:

      .. rst-class:: ansible-option-title

      **continueAuthorzPolicy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-continueAuthorzPolicy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ContinueAuthorzPolicy flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-description"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-description:

      .. rst-class:: ansible-option-title

      **description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Radius Server Sequence's description.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Radius Server Sequence's id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise_hostname}}.

      If it is false, it sends the requests to https://{{ise_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-localAccounting"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-localAccounting:

      .. rst-class:: ansible-option-title

      **localAccounting**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-localAccounting" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LocalAccounting flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Radius Server Sequence's name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-OnRequestAttrManipulatorList"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-OnRequestAttrManipulatorList:

      .. rst-class:: ansible-option-title

      **OnRequestAttrManipulatorList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-OnRequestAttrManipulatorList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The onRequestAttrManipulators is required only if useAttrSetOnRequest is true.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-OnRequestAttrManipulatorList/action"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-OnRequestAttrManipulatorList/action:

      .. rst-class:: ansible-option-title

      **action**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-OnRequestAttrManipulatorList/action" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Allowed Values - ADD, - UPDATE, - REMOVE, - REMOVEANY.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-OnRequestAttrManipulatorList/attributeName"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-OnRequestAttrManipulatorList/attributeName:

      .. rst-class:: ansible-option-title

      **attributeName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-OnRequestAttrManipulatorList/attributeName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radius Server Sequence's attributeName.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-OnRequestAttrManipulatorList/changedVal"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-OnRequestAttrManipulatorList/changedVal:

      .. rst-class:: ansible-option-title

      **changedVal**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-OnRequestAttrManipulatorList/changedVal" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The changedVal is required only if the action equals to 'UPDATE'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-OnRequestAttrManipulatorList/dictionaryName"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-OnRequestAttrManipulatorList/dictionaryName:

      .. rst-class:: ansible-option-title

      **dictionaryName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-OnRequestAttrManipulatorList/dictionaryName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radius Server Sequence's dictionaryName.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-OnRequestAttrManipulatorList/value"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-OnRequestAttrManipulatorList/value:

      .. rst-class:: ansible-option-title

      **value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-OnRequestAttrManipulatorList/value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radius Server Sequence's value.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-prefixSeparator"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-prefixSeparator:

      .. rst-class:: ansible-option-title

      **prefixSeparator**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-prefixSeparator" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The prefixSeparator is required only if stripPrefix is true. The maximum length is 1 character.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-RadiusServerList"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-RadiusServerList:

      .. rst-class:: ansible-option-title

      **RadiusServerList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-RadiusServerList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Radius Server Sequence's RadiusServerList.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-remoteAccounting"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-remoteAccounting:

      .. rst-class:: ansible-option-title

      **remoteAccounting**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-remoteAccounting" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      RemoteAccounting flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-stripPrefix"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-stripPrefix:

      .. rst-class:: ansible-option-title

      **stripPrefix**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-stripPrefix" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      StripPrefix flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-stripSuffix"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-stripSuffix:

      .. rst-class:: ansible-option-title

      **stripSuffix**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-stripSuffix" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      StripSuffix flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-suffixSeparator"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-suffixSeparator:

      .. rst-class:: ansible-option-title

      **suffixSeparator**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-suffixSeparator" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The suffixSeparator is required only if stripSuffix is true. The maximum length is 1 character.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-useAttrSetBeforeAcc"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-useAttrSetBeforeAcc:

      .. rst-class:: ansible-option-title

      **useAttrSetBeforeAcc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-useAttrSetBeforeAcc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      UseAttrSetBeforeAcc flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-useAttrSetOnRequest"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__parameter-useAttrSetOnRequest:

      .. rst-class:: ansible-option-title

      **useAttrSetOnRequest**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-useAttrSetOnRequest" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      UseAttrSetOnRequest flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are radius_server_sequence.RadiusServerSequence.create_radius_server_sequence, radius_server_sequence.RadiusServerSequence.delete_radius_server_sequence_by_id, radius_server_sequence.RadiusServerSequence.update_radius_server_sequence_by_id,
   - Paths used are post /ers/config/radiusserversequence, delete /ers/config/radiusserversequence/{id},
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Update by id
      cisco.ise.radius_server_sequence:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        BeforeAcceptAttrManipulatorsList:
        - action: string
          attributeName: string
          changedVal: string
          dictionaryName: string
          value: string
        OnRequestAttrManipulatorList:
        - action: string
          attributeName: string
          changedVal: string
          dictionaryName: string
          value: string
        RadiusServerList:
        - string
        continueAuthorzPolicy: true
        description: string
        id: string
        localAccounting: true
        name: string
        prefixSeparator: string
        remoteAccounting: true
        stripPrefix: true
        stripSuffix: true
        suffixSeparator: string
        useAttrSetBeforeAcc: true
        useAttrSetOnRequest: true

    - name: Delete by id
      cisco.ise.radius_server_sequence:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: absent
        id: string

    - name: Create
      cisco.ise.radius_server_sequence:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        BeforeAcceptAttrManipulatorsList:
        - action: string
          attributeName: string
          changedVal: string
          dictionaryName: string
          value: string
        OnRequestAttrManipulatorList:
        - action: string
          attributeName: string
          changedVal: string
          dictionaryName: string
          value: string
        RadiusServerList:
        - string
        continueAuthorzPolicy: true
        description: string
        localAccounting: true
        name: string
        prefixSeparator: string
        remoteAccounting: true
        stripPrefix: true
        stripSuffix: true
        suffixSeparator: string
        useAttrSetBeforeAcc: true
        useAttrSetOnRequest: true





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"id\\": \\"string\\",\\n  \\"name\\": \\"string\\",\\n  \\"description\\": \\"string\\",\\n  \\"stripPrefix\\": true,\\n  \\"stripSuffix\\": true,\\n  \\"prefixSeparator\\": \\"string\\",\\n  \\"suffixSeparator\\": \\"string\\",\\n  \\"remoteAccounting\\": true,\\n  \\"localAccounting\\": true,\\n  \\"useAttrSetOnRequest\\": true,\\n  \\"useAttrSetBeforeAcc\\": true,\\n  \\"continueAuthorzPolicy\\": true,\\n  \\"RadiusServerList\\": [\\n    \\"string\\"\\n  ],\\n  \\"OnRequestAttrManipulatorList\\": [\\n    {\\n      \\"action\\": \\"string\\",\\n      \\"dictionaryName\\": \\"string\\",\\n      \\"attributeName\\": \\"string\\",\\n      \\"value\\": \\"string\\",\\n      \\"changedVal\\": \\"string\\"\\n    }\\n  ],\\n  \\"BeforeAcceptAttrManipulatorsList\\": [\\n    {\\n      \\"action\\": \\"string\\",\\n      \\"dictionaryName\\": \\"string\\",\\n      \\"attributeName\\": \\"string\\",\\n      \\"value\\": \\"string\\",\\n      \\"changedVal\\": \\"string\\"\\n    }\\n  ],\\n  \\"link\\": {\\n    \\"rel\\": \\"string\\",\\n    \\"href\\": \\"string\\",\\n    \\"type\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_update_response"></div>

      .. _ansible_collections.cisco.ise.radius_server_sequence_module__return-ise_update_response:

      .. rst-class:: ansible-option-title

      **ise_update_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_update_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"UpdatedFieldsList\\": {\\n    \\"updatedField\\": [\\n      {\\n        \\"field\\": \\"string\\",\\n        \\"oldValue\\": \\"string\\",\\n        \\"newValue\\": \\"string\\"\\n      }\\n    ],\\n    \\"field\\": \\"string\\",\\n    \\"oldValue\\": \\"string\\",\\n    \\"newValue\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

